# labickinect

./: .gitignore  CMakeLists.txt  FuzzySystem.h  KinectController.cpp  KinectController.h  LabicCV.cpp  LabicCV.h  LabicKinect.cpp  LabicKinect.h  LabicMatcher.cpp  LabicMatcher.h  LabicPCL.cpp  LabicPCL.h  LabicReconstructor.cpp  LabicReconstructor.h  PseudocodigoLabicKinect.rtf  RANSACAligner.cpp  RANSACAligner.h  README.md  RGBDImage.cpp  RGBDImage.h  Reconstructor.cpp  Reconstructor.h  common.h  cv.cpp  kinect_old.cpp  labickinect.sublime-project  labickinect.sublime-workspace  libfreenect.h  main.cpp  main_old.cpp  main_old.h  mutex.h  pcl_viewer.cpp  pcl_viewer.h  queue.h  rgbd_image.cpp  rgbd_image.h  testereconstructor.cpp
kinect/: kinect_controller.cpp  kinect_controller.h
reconstructor/: ransac_aligner.cpp  ransac_aligner.h  reconstruction_exception.h  reconstructor.cpp  reconstructor.h  visual_reconstructor.cpp  visual_reconstructor.h  world.h
tools/: debug.h  downsample_test.cpp  queue.h
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  labickinect_postBuildPhase.makeRelease
xcode/Debug/: labickinect
xcode/LabicKinect.build/Debug/ALL_BUILD.build/: Script-0B6A77B57F7240ED9DC8B2F7.sh
xcode/LabicKinect.build/Debug/ZERO_CHECK.build/: Script-C44D56F592B24DFAA1F90CC4.sh
xcode/LabicKinect.build/Debug/labickinect.build/: Script-38DF38A4599E40FA83B111E5.sh  labickinect.dep  labickinect~.dep
xcode/LabicKinect.build/Debug/labickinect.build/Objects-normal/x86_64/: LabicCV.d  LabicKinect.d  LabicMatcher.d  LabicPCL.d  labickinect.LinkFileList  main.d  main.dia
xcode/LabicKinect.xcodeproj/: project.pbxproj
xcode/LabicKinect.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/LabicKinect.xcodeproj/project.xcworkspace/xcuserdata/macecchi.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/LabicKinect.xcodeproj/xcuserdata/macecchi.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  labickinect.xcscheme  xcschememanagement.plist
